@@ -1,1 +1,1 @@
-petname.py usr/share/pyshared/petname/
+petname/petname.py usr/share/pyshared/petname/
